--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="aboutus.css">
+    <link rel="stylesheet" href="css/aboutus.css">
 </head>
 
 <body>
