--- a/wineshop.html
+++ b/wineshop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,22 @@
 </head>
 
 <body>
+
+    <h1>Wine shop</h1>
+    <h2>Come for the taste - stay for the lifestyle.<br>
+        Discover Moldovan wines.</h2>
+
+
+    <template id="filterTemplate">
+        <section class="filternav">
+            <ul class="filterul">
+                <li><a href="" class=""></a></li>
+            </ul>
+        </section>
+    </template>
+
+
     <script src="script.js"></script>
 </body>
+
 </html>
