setup wineshop html and images

--- a/wineshop.html
+++ b/wineshop.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-
+    <img class="header_image" src="images/photos/wineshop/bgimage_wineshop.png" alt="Several bottles and glass of wine" />
     <h1>Wine shop</h1>
     <h2>Come for the taste - stay for the lifestyle.<br>
         Discover Moldovan wines.</h2>
 
-
+    <!--
     <template id="filterTemplate">
         <section class="filternav">
             <ul class="filterul">
@@ -22,7 +22,39 @@
             </ul>
         </section>
     </template>
+        -->
 
+    <main></main>
+
+    <template id="productTemplate">
+    </template>
+
+    <article class="product">
+        <div class=product_card>
+            <img class="product_image" src="" alt="" />
+            <h3 class="product_title">Femme Fatale</h3>
+            <h4 class="product_winery">Carpe Diem</h4>
+            <p class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+            <p class="product_price">150 DKK</p>
+        </div>
+    </article>
+
+
+    <!--
+    <template>
+        <article class="life-change">
+            <div class="lifechangecard">
+                <span class="lifechangecardhover">
+                    <h2 class="title2">Becoming unemployed</h2>
+                    <div class="shortdescription">short description</div>
+                    <a href="singlechange.html?change_id=" class="learnMore">Learn more</a>
+                </span>
+                <img class="product_image" src="img/unemployed.png" alt="Illustration of the life change" />
+                <h2 class="title">Becoming unemployed</h2>
+            </div>
+        </article>
+    </template>
+    -->
 
     <script src="script.js"></script>
 </body>
