--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,154 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
+<div class="sticky_header" id="mySticky_Header">
+    <p>My Sticky Header<p>
+</div>
+<header>
+    <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+    <nav>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="wineshop.html">WINE SHOP</a></li>
+            <li><a href="events.html">EVENTS</a></li>
+        </ul>
+    </nav>
+    <section class="header_video">
+        <video autoplay muted loop id="Moldovin_video">
+            <source src="video/IMG_4824.mp4" type="video/mp4">
+        </video>
+        <div class="video_title">
+            <h1> Text</h1>
+        </div>
+    </section>
+</header>
+
 <body>
+
+    <section class="xmas_offer">
+        <div class="xmas_offer_background">
+            <img src="images/photos/homepage/Group%20192.png">
+        </div>
+        <div class="wine_offer">
+            <img src="images/photos/homepage/Group%20179.png">
+        </div>
+        <div class="xmas_text">
+            <h1> HEADING 1</h1>
+            <h2> HEADING 2</h2>
+            <p> LOREM IPSUM</p>
+            <button> CLICK HERE </button>
+        </div>
+    </section>
+
+    <section class="why_moldova">
+        <div class="moldova_map">
+            <img src="images/photos/homepage/whymoldova.png">
+        </div>
+        <div class="why_moldova_text">
+            <h3>Why Moldova?</h3>
+            <h1> Born With Wine</h1>
+            <p> BULSHIT TEXT HERE HELO HELO HELO</p>
+        </div>
+    </section>
+
+    <section class="icons_overview">
+        <div class="wrapper">
+            <div class="box">
+
+                <div class="icon_1">
+                    <img src="images/icons/homepage/geography.png">
+                </div>
+                <p class="icon_title"> Geography</p>
+                <p class="icon_des"> Moldova Shit helo helo</p>
+            </div>
+
+            <div class="box">
+
+                <div class="icon_2">
+                    <img src="images/icons/homepage/climate.png">
+                </div>
+                <p class="icon_title"> Climate</p>
+                <p class="icon_des"> Moldova Shit helo helo</p>
+            </div>
+
+            <div class="box">
+
+                <div class="icon_3">
+                    <img src="images/icons/homepage/soil.png">
+                </div>
+                <p class="icon_title"> Soil</p>
+                <p class="icon_des"> Moldova Shit helo helo</p>
+            </div>
+
+            <div class="box">
+
+                <div class="icon_4">
+                    <img src="images/icons/homepage/grapes.png">
+                </div>
+                <p class="icon_title"> Grapes</p>
+                <p class="icon_des"> Moldova Shit helo helo</p>
+            </div>
+
+            <div class="box">
+
+                <div class="icon_5">
+                    <img src="images/icons/homepage/taste.png">
+                </div>
+                <p class="icon_title">Taste</p>
+                <p class="icon_des"> Moldova Shit helo helo</p>
+            </div>
+
+            <div class="box">
+
+                <div class="icon_6">
+                    <img src="images/icons/homepage/winemaking.png">
+                </div>
+                <p class="icon_title">Winemaking</p>
+                <p class="icon_des"> Moldova Shit helo helo</p>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="about_us">
+        <div class="about_us_img"> <img src="images/photos/homepage/theconnection.png"> </div>
+        <div class="about_us_text">
+            <h3>About Us</h3>
+            <h1> We're the Connection</h1>
+            <p> BULSHIT TEXT about my butt</p>
+            <button> click to know us </button>
+        </div>
+    </section>
+
+    <section class="our_treasure">
+        <div class="our_treasure_img"> <img src="images/photos/homepage/ourtreasure.png"> </div>
+        <div class="our_treasure_text">
+            <h3>Wines</h3>
+            <h1>Out Treasure</h1>
+            <p> BULSHIT TEXT about my butt</p>
+            <button> go to wineshop </button>
+        </div>
+    </section>
+
+    <section class="winetastic_exp">
+        <div class="winetastic_exp_text">
+            <h3>Events</h3>
+            <h1>Winetastic Experience</h1>
+            <p> BULSHIT TEXT about experience</p>
+        </div>
+        <div class="winetastic_exp_1"> <img src="images/photos/homepage/event1.png"> </div>
+        <div class="winetastic_exp_2"> <img src="images/photos/homepage/event2.png"> </div>
+        <button class="public_winetasting"> public winetasting </button>
+        <button class="corporate_winetasting"> corporate winetasting </button>
+    </section>
+
+
+    <footer>
+        <p>Copyright © Moldovin</p>
+    </footer>
+
     <script src=""></script>
 </body>
+
 </html>
