single product html structure

--- a/product.html
+++ b/product.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,42 @@
 </head>
 
 <body>
-    <script src=""></script>
+
+
+    <article class="product">
+        <div class=product_card>
+            <img class="product_background" src="" alt="" />
+            <img class="product_image" src="" alt="" />
+            <h1 class="product_title">Femme Fatale</h1>
+            <h2 class="product_winery">Carpe Diem</h2>
+
+            <ul class="product_info">
+                <li class="thewine">
+                    <p class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                    <p class="product_volume">0,75 L</p>
+                    <p class="product_alcohol">13.5%</p>
+                    <p class="product_price">150 DKK</p>
+
+                    <section class="shopping_btn">
+                        <h3 class="quantity_title">Quantity:</h3>
+                        <button class="minus_btn">-</button>
+                        <p class="quatity_number">1</p>
+                        <button class="plus_btn">+</button>
+                        <button class="addtocart_btn">ADD TO CART</button>
+
+                    </section>
+                </li>
+                <li class="description"></li>
+                <li class="tasteprofile"></li>
+            </ul>
+
+>
+
+        </div>
+    </article>
+
+
+    <script src="script.js"></script>
 </body>
+
 </html>
