--- a/wineshop.html
+++ b/wineshop.html
@@ -29,13 +29,13 @@
     <template id="productTemplate">
     </template>
 
-    <article class="product">
-        <div class=product_card>
-            <img class="product_image" src="" alt="" />
-            <h3 class="product_title">Femme Fatale</h3>
-            <h4 class="product_winery">Carpe Diem</h4>
-            <p class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-            <p class="product_price">150 DKK</p>
+    <article class="productlist">
+        <div class=productlist_card>
+            <img class="productlist_image" src="" alt="" />
+            <h3 class="productlist_title">Femme Fatale</h3>
+            <h4 class="productlist_winery">Carpe Diem</h4>
+            <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+            <p class="productlist_price">150 DKK</p>
         </div>
     </article>
 
