continue html product structure

--- a/product.html
+++ b/product.html
@@ -31,15 +31,17 @@
                         <p class="quatity_number">1</p>
                         <button class="plus_btn">+</button>
                         <button class="addtocart_btn">ADD TO CART</button>
-
                     </section>
                 </li>
                 <li class="description"></li>
                 <li class="tasteprofile"></li>
             </ul>
-
->
-
+            <section class="winery_info">
+                <img class="winery_logo" src="" alt="" />
+                <h4 class="winery_title">THE WINERY</h4>
+                <h5 class="winery_name">Carpe Diem</h5>
+                <p class="winery_description">Carpe Diem is a family owned winery that goes back four generations. The winery sits in Codru wine region, known for its amazing terroir. They use both French inspired and indigenous varieties to make individual unique wines and blends. The vineyards fill 10,5 ha, so therefore they are part of the Moldovan Association for Small Wineries. Each wine is delicately produced, and all grapes are hand picked and harvested manually.</p>
+            </section>
         </div>
     </article>
 
