video commit, styling of header and sticky header

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 
 <div class="sticky_header" id="mySticky_Header">
-    <p>My Sticky Header<p>
+    <p id="free_shipping">Free shipping</p>
+    <p id="sticky_offer">Special Christmas offer: 2 bottles of Lupi from Gitana - 20% off. Check it out!<p>
+
+            <div class="trustpilot_div">
+                <p> Excellent </p>
+                <img class="trustpilot_stars" src="images/photos/homepage/TP_stars.svg">
+                <img class="trustpilot" src="images/photos/homepage/trustpilot_logo.svg">
+            </div>
 </div>
 <header>
-    <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+
     <nav>
+        <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="aboutus.html">ABOUT US</a></li>
@@ -22,11 +30,12 @@
         </ul>
     </nav>
     <section class="header_video">
-        <video autoplay muted loop id="Moldovin_video">
+        <video autoplay muted loop id="Moldovin_video" width="100%" height="auto" controls>
             <source src="video/IMG_4824.mp4" type="video/mp4">
         </video>
         <div class="video_title">
-            <h1> Text</h1>
+            <h1>We want to push your boundaries in
+                new and interesting ways, by sharing with you the best selection of Moldovan wines.</h1>
         </div>
     </section>
 </header>
