last changes to wineshop

--- a/wineshop.html
+++ b/wineshop.html
@@ -9,12 +9,16 @@
 </head>
 
 <body>
+    <header>
+<!--    banner-->
+    </header>
+
 
     <h1>Wine shop</h1>
     <h2>Come for the taste - stay for the lifestyle.<br>
         Discover Moldovan wines.</h2>
 
-
+<main></main>
     <template id="filterTemplate">
         <section class="filternav">
             <ul class="filterul">
