initial styling of events

--- a/events.html
+++ b/events.html
@@ -8,6 +8,30 @@
 </head>
 
 <body>
+
+
+    <section class="events_intro">
+        <h3>Events</h3>
+        <h1>Winetastic Experience</h1>
+        <p> We host two kind of wine tasting events to get you closer to the fantastic Moldovan wine culture.
+            But what both have in common is the informal setting of them, nothing to do with the traditional sit-down tastings. Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.</p>
+
+
+        <div class="eventimages">
+            <div class="publiceventsimg"></div>
+            <div class="privateeventsimg"></div>
+        </div>
+
+    </section>
+
+
+
+
+
+
+
+
+
+
     <script src=""></script>
-</body>
-</html>
+</body></html>
