first two sections

--- a/events.html
+++ b/events.html
@@ -26,7 +26,41 @@
 
 
 
+    <section class="offer">
+        <h3>What we offer</h3>
+        <h1>Unique wine tastings</h1>
 
+        <div class="wrapper">
+
+            <div class="box">
+                <div class="offer_1">
+                    <img src="images/icons/events/wine-presentation.png">
+                </div>
+                <p class="offer_title">Individualized presentations</p>
+                <p class="offer_des">Our wine experts talk about the wine in smaller groups.</p>
+            </div>
+
+            <div class="box">
+                <div class="offer_2">
+                    <img src="images/icons/events/wine-selection.png">
+                </div>
+                <p class="offer_title">carefully selected wines</p>
+                <p class="offer_des">We feature only exemplary Moldovan wines of premium quality.</p>
+            </div>
+
+            <div class="box">
+                <div class="offer_2">
+                    <img src="images/icons/events/moldova.png">
+                </div>
+                <p class="offer_title">True Moldovan experience</p>
+                <p class="offer_des">Detailed introduction of Moldovan wines, traditions, and culture.</p>
+            </div>
+
+
+        </div>
+
+
+    </section>
 
 
 
