--- a/events.html
+++ b/events.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +32,6 @@
         <h1>Unique wine tastings</h1>
 
         <div class="wrapper">
-
             <div class="box">
                 <div class="offer_1">
                     <img src="images/icons/events/wine-presentation.png">
@@ -55,17 +55,61 @@
                 <p class="offer_title">True Moldovan experience</p>
                 <p class="offer_des">Detailed introduction of Moldovan wines, traditions, and culture.</p>
             </div>
-
-
         </div>
+    </section>
+
+    <section class="testimonial">
+
+        <h3>Testimonials</h3>
+        <h1>What people say about us</h1>
+
+        <div class="wrapper">
+            <div class="box">
+                <p class="quotemark">"</p>
+                <div class="textcard">
+                    <p class="test_des">"I'm from Moldova and suggested my Danish friends joining one of Moldovin's events so they could try real Moldovan wine. They loved it and we had a great time!"</p>
+                </div>
+                <div class="test_1">
+                    <img src="images/photos/events/alexandru.png">
+
+                </div>
+                <p class="test_name">Alexandru Gutu</p>
+            </div>
+
+            <div class="box">
+                <p class="quotemark">"</p>
+                <div class="textcard">
+                    <p class="test_des">"Top Wines from a lesser-known region! Excellent wines from Moldova and hosts amazing wine tastings too! It's always nice to expand your wine knowledge especially from lesser-known regions like Moldova that create extraordinary wines. Their wine tasting is very cozy, fun, and great networking with other wine enthusiasts!"</p>
+                </div>
+                <div class="test_2">
+                    <img src="images/photos/events/katja.png">
+                </div>
+                <p class="test_name">Katja Petersen</p>
+            </div>
+
+            <div class="box">
+                <p class="quotemark">"</p>
+                <div class="textcard">
+                    <p class="test_des">"I'm a fan of Moldovan wines, so I was delighted to taste some of the best ones with Moldovin"</p>
+                </div>
+                <div class="test_3">
+                    <img src="images/photos/events/trine.png">
+
+                </div>
+                <p class="test_name">Trine Bengtsson</p>
+            </div>
+        </div>
+
+
+
+
+
 
 
     </section>
 
 
-
-
-
-
     <script src=""></script>
-</body></html>
+</body>
+
+</html>
