events page almost ready

--- a/events.html
+++ b/events.html
@@ -10,17 +10,20 @@
 
 <body>
 
+    <div class="banner">
+        <h1>Events</h1>
+    </div>
 
     <section class="events_intro">
         <h3>Events</h3>
-        <h1>Winetastic Experience</h1>
+        <h2>Winetastic Experience</h2>
         <p> We host two kind of wine tasting events to get you closer to the fantastic Moldovan wine culture.
             But what both have in common is the informal setting of them, nothing to do with the traditional sit-down tastings. Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.</p>
 
 
         <div class="eventimages">
-            <div class="publiceventsimg"></div>
-            <div class="privateeventsimg"></div>
+            <div class="publiceventsimg"><span class="buttonstyle"><button><p>Public wine<br> tastings</p></button></span></div>
+            <div class="privateeventsimg"><span class="buttonstyle"><button><p>Wine tastings <br>for companies</p></button></span></div>
         </div>
 
     </section>
@@ -29,7 +32,7 @@
 
     <section class="offer">
         <h3>What we offer</h3>
-        <h1>Unique wine tastings</h1>
+        <h2>Unique wine tastings</h2>
 
         <div class="wrapper">
             <div class="box">
@@ -61,7 +64,7 @@
     <section class="testimonial">
 
         <h3>Testimonials</h3>
-        <h1>What people say about us</h1>
+        <h2>What people say about us</h2>
 
         <div class="wrapper">
             <div class="box">
