public events html added

--- a/events.html
+++ b/events.html
@@ -10,11 +10,11 @@
 
 <body>
 
-    <div class="banner">
+    <div class="bannerevents">
         <h1>Events</h1>
     </div>
 
-    <section class="events_intro">
+    <section class="intro">
         <h3>Events</h3>
         <h2>Winetastic Experience</h2>
         <p> We host two kind of wine tasting events to get you closer to the fantastic Moldovan wine culture.
