--- a/publicevents.html
+++ b/publicevents.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="css/privateevents.css">
+    <link rel="stylesheet" href="css/events.css">
 </head>
 
 <body>
+
+    <div class="bannerpublicevents">
+        <h1>Public wine tastings</h1>
+    </div>
+
+    <section class="intro">
+        <h3>Public wine tastings</h3>
+        <h2>Upcoming events</h2>
+        <p>Find out where and when you can join us for a glass of Moldovan wine!
+            Get more information about our next wine tasting and purchase tickets via our Biletto Portal.</p>
+
+    </section>
+
+    <section class="event1">
+        <div class="wrapper2">
+
+            <div class="event1image"></div>
+            <div class="textbox">
+                <div class="center">
+                    <h5>Christmas wine tasting (Copenhagen)</h5>
+                    <div class="wrapper">
+                        <div class="box">
+                            <div>
+                                <img src="images/icons/events/time.png">
+                            </div>
+                            <p class="time">SAT, 12 DEC 2020 <br> 17:00-21:00h</p>
+                        </div>
+                        <div class="box">
+                            <div>
+                                <img src="images/icons/events/location.png">
+                            </div>
+                            <p class="time">Strøm Bar
+                                <br>Copenhagen</p>
+                        </div>
+                        <div class="box">
+                            <div>
+                                <img src="images/icons/events/ticket.png">
+                            </div>
+                            <p class="time">200 DKK pre-tickets
+                                <br>250 DKK at the door</p>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+    </section>
+
+
+
+
     <script src=""></script>
-</body>
-</html>
+</body></html>
