--- a/product.html
+++ b/product.html
@@ -10,10 +10,10 @@
 
 <body>
 
-
+    <main></main>
     <article class="product">
         <div class=product_card>
-            <img class="product_background" src="" alt="" />
+            <img class="product_background" src="images/photos/wineshop/bgimage_wineshop.png" alt="" />
             <img class="product_image" src="" alt="" />
             <h1 class="product_title">Femme Fatale</h1>
             <h2 class="product_winery">Carpe Diem</h2>
@@ -37,12 +37,45 @@
                 <li class="tasteprofile"></li>
             </ul>
             <section class="winery_info">
-                <img class="winery_logo" src="" alt="" />
+                <img class="winery_logo" src="images/photos/wineshop/winery_carpediem.png" alt="" />
                 <h4 class="winery_title">THE WINERY</h4>
                 <h5 class="winery_name">Carpe Diem</h5>
                 <p class="winery_description">Carpe Diem is a family owned winery that goes back four generations. The winery sits in Codru wine region, known for its amazing terroir. They use both French inspired and indigenous varieties to make individual unique wines and blends. The vineyards fill 10,5 ha, so therefore they are part of the Moldovan Association for Small Wineries. Each wine is delicately produced, and all grapes are hand picked and harvested manually.</p>
             </section>
         </div>
+    </article>
+
+    <article class="product_suggestions">
+        <section class="suggestion1">
+            <img class="suggestion1_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <h6 class="suggestion1_title">Femme Fatale</h6>
+            <h7 class="suggestion1_winery">Carpe Diem</h7>
+            <p class="suggestion1_price">150 DKK</p>
+        </section>
+        <section class="suggestion2">
+            <img class="suggestion2_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <h6 class="suggestion2_title">Femme Fatale</h6>
+            <h7 class="suggestion2_winery">Carpe Diem</h7>
+            <p class="suggestion2_price">150 DKK</p>
+        </section>
+        <section class="suggestion3">
+            <img class="suggestion3_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <h6 class="suggestion3_title">Femme Fatale</h6>
+            <h7 class="suggestion3_winery">Carpe Diem</h7>
+            <p class="suggestion3_price">150 DKK</p>
+        </section>
+        <section class="suggestion4">
+            <img class="suggestion4_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <h6 class="suggestion4_title">Femme Fatale</h6>
+            <h7 class="suggestion4_winery">Carpe Diem</h7>
+            <p class="suggestion4_price">150 DKK</p>
+        </section>
+        <section class="suggestion5">
+            <img class="suggestion5_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <h6 class="suggestion5_title">Femme Fatale</h6>
+            <h7 class="suggestion5_winery">Carpe Diem</h7>
+            <p class="suggestion5_price">150 DKK</p>
+        </section>
     </article>
 
 
