add nav bar and header

--- a/wineshop.html
+++ b/wineshop.html
@@ -9,8 +9,21 @@
 </head>
 
 <body>
+
     <header>
-        <!--    banner-->
+        <nav>
+            <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutus.html">ABOUT US</a></li>
+                <li><a href="wineshop.html">WINE SHOP</a></li>
+                <li><a href="events.html">EVENTS</a></li>
+            </ul>
+        </nav>
+
+        <section class="wineshop_header">
+            <h1>Wine shop</h1>
+        </section>
     </header>
 
 
@@ -19,6 +32,7 @@
         Discover Moldovan wines.</h2>
 
     <main></main>
+
     <template id="filterTemplate">
         <section class="filternav">
             <ul class="filterul">
