--- a/product.html
+++ b/product.html
@@ -10,6 +10,18 @@
 
 <body>
 
+    <header>
+        <nav>
+            <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="aboutus.html">ABOUT US</a></li>
+                <li><a href="wineshop.html">WINE SHOP</a></li>
+                <li><a href="events.html">EVENTS</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <main></main>
     <article class="product">
         <div class=product_card>
