--- a/events.html
+++ b/events.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-
+    <header></header>
+<main>
     <div class="bannerevents">
         <h1>Events</h1>
     </div>
@@ -111,7 +112,7 @@
 
     </section>
 
-
+</main>
     <script src=""></script>
 </body>
 
