--- a/privateevents.html
+++ b/privateevents.html
@@ -4,10 +4,93 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="css/privateevents.css">
+    <link rel="stylesheet" href="css/events.css">
 </head>
 
 <body>
+
+    <main>
+
+        <section class="intro">
+            <h3>wine tastings for companies</h3>
+            <h2>Unique team building</h2>
+            <p>Wine Down and Discover Moldovan Wine Culture at the workplace!
+                Wine tasting events are a great opportunity for team-building, improving company culture, and strengthening your client network.</p>
+
+        </section>
+
+
+        <section class="event">
+            <div class="wrapper2">
+
+                <div class="textbox">
+                    <h3>Our offer</h3>
+                    <h5>What will you get?</h5>
+<ul>
+                    <li><p>We provide everything. All you have to do is relax, taste, and enjoy.</p></li>
+                    <li><p>We feature only exemplary Moldovan wines of premium quality. </p></li>
+                    <li><p>Detailed introduction of Moldovan Wines, traditions, and culture.</p></li>
+                    <li><p>Discover the unique grapes grown only in Moldova</p></li>
+                    <li><p>Learn from our world class Sommelier</p></li>
+                    <li><p> Have the opportunity for team-building activities</p></li>
+
+
+                    </ul>
+                    <button>
+                        <p>Book event</p>
+                    </button>
+                </div>
+                <div class="event1image"></div>
+            </div>
+        </section>
+
+<section class="prices">
+         <h3>prices</h3>
+                    <h5>Our options</h5>
+
+    <p>Here you can check the prices of booking a wine tasting with us, according to the number of employees attending the event.</p>
+
+
+
+
+
+
+        </section>
+
+
+
+
+
+
+
+               <section class="event">
+            <div class="wrapper2">
+
+                <div class="textbox">
+                    <h3>The experience</h3>
+                    <h5>More than just tasting</h5>
+<p>
+                    Goodbye to the old traditional, boring conservative sit-down tastings.<br>
+
+Hello to a new fun formate, perfect for socialising, networking, and team-building.
+
+                    </p>
+                    <button>
+                        <p>Book event</p>
+                    </button>
+                </div>
+                <div class="event1image"></div>
+            </div>
+        </section>
+
+
+
+    </main>
+
+
+
+
+
+
     <script src=""></script>
-</body>
-</html>
+</body></html>
