--- a/publicevents.html
+++ b/publicevents.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-
+    <header></header>
+<main>
     <div class="bannerpublicevents">
         <h1>Public wine tastings</h1>
     </div>
@@ -34,28 +35,30 @@
                                 <img src="images/icons/events/time.png">
                             </div>
                             <p class="time">SAT, 19 DEC 2020
-<br>16:00-19:00h</p>
+                                <br>16:00-19:00h</p>
                         </div>
                         <div class="box">
                             <div>
                                 <img src="images/icons/events/location.png">
                             </div>
                             <p class="time">Fairbar
-<br>Aarhus</p>
+                                <br>Aarhus</p>
                         </div>
                         <div class="box">
                             <div>
                                 <img src="images/icons/events/ticket.png">
                             </div>
                             <p class="time">200 DKK pre-tickets
-<br>250 DKK at the door</p>
+                                <br>250 DKK at the door</p>
                         </div>
                     </div>
                 </div>
                 <p><strong>What's included?</strong></p>
                 <p>Four samples of premium Moldovan wine.<br> Information on the wines, production methods and history of Moldova from our expert sommelier Corneliu Tiulenev.
                 </p>
-                <button><p>Get Tickets</p></button>
+                <button>
+                    <p>Get Tickets</p>
+                </button>
             </div>
         </div>
     </section>
@@ -92,13 +95,13 @@
                 <p><strong>What's included?</strong></p>
                 <p>Four samples of premium Moldovan wine.<br> Information on the wines, production methods and history of Moldova from our expert sommelier Corneliu Tiulenev.
                 </p>
-                <button><p>Get Tickets</p></button>
+                <button>
+                    <p>Get Tickets</p>
+                </button>
             </div>
         </div>
     </section>
 
-
+</main>
     <script src=""></script>
-</body>
-
-</html>
+</body></html>
