--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="css/product.css">
+    <link rel="stylesheet" href="css/wineshop.css">
 </head>
 
 <body>
