--- a/wineshop.html
+++ b/wineshop.html
@@ -31,20 +31,46 @@
     <h2>Come for the taste - stay for the lifestyle.<br>
         Discover Moldovan wines.</h2>
 
-    <main></main>
 
-    <template id="filterTemplate">
+
+    <!-- <template id="filterTemplate">
         <section class="filternav">
             <ul class="filterul">
                 <li><a href="" class=""></a></li>
             </ul>
         </section>
-    </template>
+</template>-->
 
+
+    <section class="filternav">
+        <ul class="filterul">
+            <li class="allwines_filter"><a href="" class="">ALL WINES</a></li>
+            <li class="white_filter">
+                <a href="" class="">
+                    <div class="whitefilter_dot"></div>
+                    <p class="whitefilter_title">WHITE</p>
+                </a>
+            </li>
+            <li class="red_filter">
+                <a href="" class="">
+                    <div class="redfilter_dot"></div>
+                    <p class="redfilter_title">RED</p>
+                </a>
+            </li>
+            <li class="rose_filter">
+                <a href="" class="">
+                    <div class="rosefilter_dot"></div>
+                    <p class="rosefilter_title">ROSE</p>
+                </a>
+            </li>
+        </ul>
+    </section>
+
+    <main></main>
 
     <article class="productlist">
         <div class=productlist_card>
-            <img class="productlist_image" src="" alt="" />
+            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
             <h3 class="productlist_title">Femme Fatale</h3>
             <h4 class="productlist_winery">Carpe Diem</h4>
             <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
@@ -69,6 +95,4 @@
     </template>
     -->
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
