add banner styling

--- a/wineshop.html
+++ b/wineshop.html
@@ -20,20 +20,22 @@
                 <li><a href="events.html">EVENTS</a></li>
             </ul>
         </nav>
-
-        <section class="wineshop_header">
-            <h1>Wine shop</h1>
-        </section>
     </header>
 
+    <main></main>
 
-    <h1>Wine shop</h1>
-    <h2>Come for the taste - stay for the lifestyle.<br>
-        Discover Moldovan wines.</h2>
+    <div class="bannewineshop">
+        <h1>Wine shop</h1>
+    </div>
 
 
+    <section class="intro">
+        <h3>Wine shop</h3>
+        <h2>Come for the taste, stay for the lifestyle.
+            Discover Moldovan wines.</h2>
+    </section>
 
-    <!-- <template id="filterTemplate">
+        <!-- <template id="filterTemplate">
         <section class="filternav">
             <ul class="filterul">
                 <li><a href="" class=""></a></li>
@@ -42,44 +44,42 @@
 </template>-->
 
 
-    <section class="filternav">
-        <ul class="filterul">
-            <li class="allwines_filter"><a href="" class="">ALL WINES</a></li>
-            <li class="white_filter">
-                <a href="" class="">
-                    <div class="whitefilter_dot"></div>
-                    <p class="whitefilter_title">WHITE</p>
-                </a>
-            </li>
-            <li class="red_filter">
-                <a href="" class="">
-                    <div class="redfilter_dot"></div>
-                    <p class="redfilter_title">RED</p>
-                </a>
-            </li>
-            <li class="rose_filter">
-                <a href="" class="">
-                    <div class="rosefilter_dot"></div>
-                    <p class="rosefilter_title">ROSE</p>
-                </a>
-            </li>
-        </ul>
-    </section>
+        <section class="filternav">
+            <ul class="filterul">
+                <li class="allwines_filter"><a href="" class="">ALL WINES</a></li>
+                <li class="white_filter">
+                    <a href="" class="">
+                        <div class="whitefilter_dot"></div>
+                        <p class="whitefilter_title">WHITE</p>
+                    </a>
+                </li>
+                <li class="red_filter">
+                    <a href="" class="">
+                        <div class="redfilter_dot"></div>
+                        <p class="redfilter_title">RED</p>
+                    </a>
+                </li>
+                <li class="rose_filter">
+                    <a href="" class="">
+                        <div class="rosefilter_dot"></div>
+                        <p class="rosefilter_title">ROSE</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
 
-    <main></main>
-
-    <article class="productlist">
-        <div class=productlist_card>
-            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-            <h3 class="productlist_title">Femme Fatale</h3>
-            <h4 class="productlist_winery">Carpe Diem</h4>
-            <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-            <p class="productlist_price">150 DKK</p>
-        </div>
-    </article>
+        <article class="productlist">
+            <div class=productlist_card>
+                <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+                <h4 class="productlist_title">Femme Fatale</h4>
+                <h5 class="productlist_winery">Carpe Diem</h5>
+                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                <p class="productlist_price">150 DKK</p>
+            </div>
+        </article>
 
 
-    <!--
+        <!--
     <template>
         <article class="life-change">
             <div class="lifechangecard">
@@ -94,5 +94,7 @@
         </article>
     </template>
     -->
-    <script src="script.js"></script>
-</body></html>
+        <script src="script.js"></script>
+</body>
+
+</html>
