add filters styling

--- a/wineshop.html
+++ b/wineshop.html
@@ -24,7 +24,7 @@
 
     <main></main>
 
-    <div class="bannewineshop">
+    <div class="bannerwineshop">
         <h1>Wine shop</h1>
     </div>
 
@@ -45,7 +45,33 @@
 
 
         <section class="filternav">
-            <ul class="filterul">
+            <ul class="filterwrapper">
+                <li><a href="" class="allwines_filter">ALL WINES</a></li>
+                <li>
+                    <a href="" class="white_filter">
+                        <div class="whitefilter_dot"></div>
+                        <p class="whitefilter_title">WHITE</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="red_filter">
+                        <div class="redfilter_dot"></div>
+                        <p class="redfilter_title">RED</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="rose_filter">
+                        <div class="rosefilter_dot"></div>
+                        <p class="rosefilter_title">ROSE</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
+
+
+<!--
+            <section class="filternav">
+            <ul class="filterwrapper">
                 <li class="allwines_filter"><a href="" class="">ALL WINES</a></li>
                 <li class="white_filter">
                     <a href="" class="">
@@ -67,6 +93,9 @@
                 </li>
             </ul>
         </section>
+-->
+
+
 
         <article class="productlist">
             <div class=productlist_card>
