create product grid

--- a/wineshop.html
+++ b/wineshop.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <main></main>
+
 
     <div class="bannerwineshop">
         <h1>Wine shop</h1>
@@ -35,7 +35,7 @@
             Discover Moldovan wines.</h2>
     </section>
 
-        <!-- <template id="filterTemplate">
+    <!-- <template id="filterTemplate">
         <section class="filternav">
             <ul class="filterul">
                 <li><a href="" class=""></a></li>
@@ -44,32 +44,32 @@
 </template>-->
 
 
-        <section class="filternav">
-            <ul class="filterwrapper">
-                <li><a href="" class="allwines_filter">ALL WINES</a></li>
-                <li>
-                    <a href="" class="white_filter">
-                        <div class="whitefilter_dot"></div>
-                        <p class="whitefilter_title">WHITE</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="red_filter">
-                        <div class="redfilter_dot"></div>
-                        <p class="redfilter_title">RED</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="rose_filter">
-                        <div class="rosefilter_dot"></div>
-                        <p class="rosefilter_title">ROSE</p>
-                    </a>
-                </li>
-            </ul>
-        </section>
+    <section class="filternav">
+        <ul class="filterwrapper">
+            <li><a href="" class="allwines_filter">ALL WINES</a></li>
+            <li>
+                <a href="" class="white_filter">
+                    <div class="whitefilter_dot"></div>
+                    <p class="whitefilter_title">WHITE</p>
+                </a>
+            </li>
+            <li>
+                <a href="" class="red_filter">
+                    <div class="redfilter_dot"></div>
+                    <p class="redfilter_title">RED</p>
+                </a>
+            </li>
+            <li>
+                <a href="" class="rose_filter">
+                    <div class="rosefilter_dot"></div>
+                    <p class="rosefilter_title">ROSE</p>
+                </a>
+            </li>
+        </ul>
+    </section>
 
 
-<!--
+    <!--
             <section class="filternav">
             <ul class="filterwrapper">
                 <li class="allwines_filter"><a href="" class="">ALL WINES</a></li>
@@ -96,10 +96,10 @@
 -->
 
 
-
+    <main>
         <article class="productlist">
-            <div class=productlist_card>
-                <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <div class="productlist_text">
                 <h4 class="productlist_title">Femme Fatale</h4>
                 <h5 class="productlist_winery">Carpe Diem</h5>
                 <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
@@ -107,8 +107,78 @@
             </div>
         </article>
 
+        <article class="productlist">
+            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <div class="productlist_text">
+                <h4 class="productlist_title">Femme Fatale</h4>
+                <h5 class="productlist_winery">Carpe Diem</h5>
+                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                <p class="productlist_price">150 DKK</p>
+            </div>
+        </article>
 
-        <!--
+        <article class="productlist">
+            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <div class="productlist_text">
+                <h4 class="productlist_title">Femme Fatale</h4>
+                <h5 class="productlist_winery">Carpe Diem</h5>
+                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                <p class="productlist_price">150 DKK</p>
+            </div>
+        </article>
+
+        <article class="productlist">
+            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <div class="productlist_text">
+                <h4 class="productlist_title">Femme Fatale</h4>
+                <h5 class="productlist_winery">Carpe Diem</h5>
+                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                <p class="productlist_price">150 DKK</p>
+            </div>
+        </article>
+
+                <article class="productlist">
+            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <div class="productlist_text">
+                <h4 class="productlist_title">Femme Fatale</h4>
+                <h5 class="productlist_winery">Carpe Diem</h5>
+                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                <p class="productlist_price">150 DKK</p>
+            </div>
+        </article>
+
+        <article class="productlist">
+            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <div class="productlist_text">
+                <h4 class="productlist_title">Femme Fatale</h4>
+                <h5 class="productlist_winery">Carpe Diem</h5>
+                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                <p class="productlist_price">150 DKK</p>
+            </div>
+        </article>
+
+        <article class="productlist">
+            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <div class="productlist_text">
+                <h4 class="productlist_title">Femme Fatale</h4>
+                <h5 class="productlist_winery">Carpe Diem</h5>
+                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                <p class="productlist_price">150 DKK</p>
+            </div>
+        </article>
+
+        <article class="productlist">
+            <img class="productlist_image" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+            <div class="productlist_text">
+                <h4 class="productlist_title">Femme Fatale</h4>
+                <h5 class="productlist_winery">Carpe Diem</h5>
+                <p class="productlist_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                <p class="productlist_price">150 DKK</p>
+            </div>
+        </article>
+
+    </main>
+    <!--
     <template>
         <article class="life-change">
             <div class="lifechangecard">
@@ -123,7 +193,5 @@
         </article>
     </template>
     -->
-        <script src="script.js"></script>
-</body>
-
-</html>
+    <script src="script.js"></script>
+</body></html>
